# helios

./: .editorconfig  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  create_consumers.py  docker-compose.yaml  init_db.py  main.py  mkdocs.yml  pyproject.toml
docs/: configuration.md  cron_jobs.md  definitions.md  lifespan.md
example/: consumers.json
src/: app.py
src/automation_settings/: __init__.py  endpoints.py  models.py  service.py
src/consumer/: __init__.py  endpoints.py  models.py  repository.py
src/consumer/services/: component.py  consumer.py
src/core/: api_router.py  definitions.py  dependencies.py
src/core/application/: lifespan.py  scheduler.py  utils.py
src/core/settings/: api.py  app.py  automation.py
src/current_data/: __init__.py  endpoints.py
src/dto/: powerflow.py  smart_meter.py
src/integrations/: __init__.py
src/integrations/switch/: base.py  shelly.py  switch.py
src/services/: component.py  grid_manager.py  influxdb_logger.py  powerflow.py
src/utils/: fronius_data_parser.py
src/utils/influxdb_queries/: fronius_smart_meter.py
